styles/home.scss
@import url("https://fonts.googleapis.com/css?family=Assistant:300,600|Merriweather+Sans:400");
@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");

sup, sub {
  vertical-align: baseline;
  position: relative;
  top: -0.4em;
}
sub {
  top: 0.4em;
}

body {
  font-family: Assistant, Sans-Serif;
}

h1 {
  font-family: "Merriweather Sans", Sans-Serif;
  font-weight: 400;
  text-align: center;
}

h2 {
  font-size: 140%;
  font-weight: bold;
  margin-top: 0.5em;
  margin-bottom: 0.3em;
}

h3 {
  font-size: 100%;
  font-weight: bold;
  margin: 0;
}

main {
  @media (min-width: 600px) {
    column-count: 2;
  }
}

section {
  break-inside: avoid-column;
}

ul {
  margin: 0.5em;
  padding-left: 1em;
}
.resume {
  max-width: 1024px;
  margin: 0 auto;
}
.info-block {
  margin-bottom: 1em;
}

.achievements {
  li {
    h3 {
      display: inline;
      &::after {
        content: "-";
        display: inline-block;
        padding-left: 0.5em;
        padding-right: 0.5em;
      }
    }
    p {
      display: inline;
    }
  }
}

.aside {
  @media (min-width: 801px) {
    float: right;
    width: 25%;
    padding-left: 1em;
  }
  @media (max-width: 800px), print {
    > * {
      display: inline-block;
      padding: 0 0.5em;
    }

    & {
      margin-bottom: 2em;
    }
  }

  .email::before {
    content: '\f0e0';
    font-family: FontAwesome;
    display: inline-block;
    padding-right: 0.3em;
  }
  .phone::before {
    content: '\f095';
    font-family: FontAwesome;
    display: inline-block;
    padding-right: 0.3em;
  }
  .address::before{
    content: '\f015';
    font-family: FontAwesome;
    display: inline-block;
    padding-right: 0.3em;
  }
  .github::before{
    content: '\f09b';
    font-family: FontAwesome;
    display: inline-block;
    padding-right: 0.3em;
  }
  .website::before{
    content: '\f0ac';
    font-family: FontAwesome;
    display: inline-block;
    padding-right: 0.3em;
  }
  .linkedin::before{
    content: '\f0e1';
    font-family: FontAwesome;
    display: inline-block;
    text-align: center;
    padding-right: 0.3em;
  }
}

$bar-width: 0.7;
$bar-color: rgba(63, 127, 191, 0.8);
.skill-graph {
  position: relative;
  .labels {
    position: relative;
    z-index: 1;
    height: 2em; /* prevent labels from wrapping to next column */
    font-size: 70%;
    @for $i from 1 to 10 {
      .label-#{$i} {
        left: $bar-width * percentage(($i) / 10);
        border-left: 1px solid #CCC;
        padding-left: 0.25em;
        line-height: 1;
        position: absolute;
      }
    }
  }
  .bars {
    /* create 10 grid lines and hide the rest*/
    $epsilon: 0.01;
    background-image: linear-gradient(
      to right,
      transparent,
      /* add epsilon to include the last line */
      transparent percentage($bar-width + $epsilon),
      white percentage($bar-width + $epsilon),
      white
    ), repeating-linear-gradient(
      to right,
      #CCC,
      #CCC 1px,
      #FFF 1px,
      #FFF #{$bar-width * 10%},
      #CCC 1px
    );

    font-size: 90%;
    .subskills {
      font-size: 90%;
    }

    @for $i from 1 through 10 {
      $width: percentage($i * $bar-width / 10);
      & .bar-#{$i}  {
        background: linear-gradient(to right, $bar-color, $bar-color $width,  transparent $width,  transparent);
        > .bar-content {
          left: $width;
          position: relative;
          margin: 0.3rem;

          > * {
            display: inline;
            &::after {
              /* line break after first part;*/
              content:"\a";
              white-space: pre;
            }
          }
        }
      }
    }
  }
}

